<resources>
    <string name="app_name">HananaApp</string>
    <string name="text">Username</string>
    <string name="title">Title</string>
    <string name="date">Date</string>
    <string name="venue">Venue</string>
    <string name="time">Time</string>
    <string name="longitude">Longitude</string>
    <string name="latitude">Latitude</string>
    <string name="rules">I agree to the terms and conditions</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- Strings related to sign up -->
    <string name="username_label">Username</string>
    <string name="username_hint">Username</string>
    <string name="name_label">Name</string>
    <string name="name_hint">Your name</string>
    <string name="email_label">Email</string>
    <string name="email_hint">Email</string>
    <string name="phone_label">Phone Number</string>
    <string name="phone_hint">Mobile number</string>
    <string name="password_label">Password</string>
    <string name="password_hint">Password</string>
    <string name="confirm_password_label">Confirm Password</string>
    <string name="confirm_password_hint">Confirm password</string>
    <string name="sign_up_button_label">Sign up</string>

    <!-- Strings related to profile -->
    <string name="account_settings_label">Account Settings</string>
    <string name="my_events_label">My Events</string>
    <string name="my_favourites_label">My Favourites</string>
    <string name="logout_label">Logout</string>
    <string name="my_profile_activity">My Profile Activity</string>
    <string name="hanana_sign_up_label">Sign up to Hanana</string>
    <string name="sign_in_button_label">Sign In</string>

</resources>
