<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/rules_regultions_checkBox"
        android:layout_width="386dp"
        android:layout_height="519dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/event_title_textView"
            android:layout_width="wrap_content"
            android:layout_height="15dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="44dp"
            android:layout_marginTop="68dp"
            android:text="@string/title"
            app:layout_constraintEnd_toStartOf="@+id/event_title_edit_text"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/event_date_textView"
            android:layout_width="wrap_content"
            android:layout_height="15dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="48dp"
            android:text="@string/date"
            app:layout_constraintEnd_toStartOf="@+id/select_date_button"
            app:layout_constraintHorizontal_bias="0.428"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/event_venue_textView" />

        <TextView
            android:id="@+id/event_venue_textView"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="40dp"
            android:text="@string/venue"
            app:layout_constraintEnd_toStartOf="@+id/event_venue_edit_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/event_title_textView" />

        <TextView
            android:id="@+id/event_time_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="36dp"
            android:text="@string/time"
            app:layout_constraintEnd_toStartOf="@+id/select_time_button"
            app:layout_constraintHorizontal_bias="0.493"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/event_date_textView" />

        <TextView
            android:id="@+id/logitute_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="36dp"
            android:layout_marginTop="40dp"
            android:text="@string/longitude"
            app:layout_constraintEnd_toStartOf="@+id/longitude_edit_text"
            app:layout_constraintHorizontal_bias="0.38"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/event_time_textView" />

        <TextView
            android:id="@+id/latitude_textView"
            android:layout_width="wrap_content"
            android:layout_height="22dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="48dp"
            android:layout_marginTop="40dp"
            android:text="@string/latitude"
            app:layout_constraintEnd_toStartOf="@+id/latitude_edit_text"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/logitute_textView" />

        <EditText
            android:id="@+id/event_title_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="44dp"
            android:layout_marginTop="48dp"
            android:ems="10"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/event_venue_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="44dp"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/event_title_edit_text" />

        <EditText
            android:id="@+id/longitude_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="44dp"
            android:layout_marginTop="12dp"
            android:ems="10"
            android:inputType="numberDecimal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/select_time_button" />

        <EditText
            android:id="@+id/latitude_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="44dp"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:inputType="numberDecimal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/longitude_edit_text"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/select_date_button"
            android:layout_width="217dp"
            android:layout_height="38dp"
            android:layout_marginEnd="40dp"
            android:layout_marginTop="20dp"
            android:onClick="showDatePickerDialog"
            android:text="Select the Date"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/event_venue_edit_text" />

        <Button
            android:id="@+id/select_time_button"
            android:layout_width="214dp"
            android:layout_height="39dp"
            android:layout_marginEnd="44dp"
            android:layout_marginTop="16dp"
            android:onClick="showTimePickerDialog"
            android:text="Select the Time"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/select_date_button" />

        <Button
            android:id="@+id/add_event_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="Add Event"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/latitude_edit_text" />
    </android.support.constraint.ConstraintLayout>
</android.support.constraint.ConstraintLayout>